Fixed scroll spacing on mobile viewports

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -26,6 +26,12 @@ header {
     url("/images/Landingv2.jpg");
 }
 
+@media screen and (max-width: 992px) {
+  header {
+      background-attachment: scroll;
+  }
+}
+
 footer {
     text-align: left;
     font-size: 16px !important;
